# sailfish_server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README_CN.md  env.cmake  install.py  main.cpp  resources.qrc
docs/: 0_Prepare.md  1_Capture_screen.md  2_Convert_to_I420.md  3_FFmpeg_encoder.md  4_Pack_to_Protobuf.md  5_Capture_cursor.md  6_Capture_audio.md  7_Replay.md  8_Decode.md  9_Render_OpenGL.md
resources/: qss.qrc
src/: AppMessages.cpp  AppMessages.h  Application.cpp  Application.h  CMakeLists.txt  Statistics.cpp  Statistics.h
src/audio/: AudioCapture.h  AudioCaptureFactory.cpp  AudioCaptureFactory.h  AudioFileSaver.cpp  AudioFileSaver.h  CMakeLists.txt  WASAPIAudioCapture.cpp  WASAPIAudioCapture.h
src/capture/: CMakeLists.txt  Capture.cpp  Capture.h  CaptureFactory.cpp  CaptureFactory.h  CapturedFrame.cpp  CapturedFrame.h  CursorCapture.cpp  CursorCapture.h  DDACapture.cpp  DDACapture.h  GraphicsCapture.cpp  GraphicsCapture.h  Monitor.cpp  Monitor.h  MonitorList.cpp  MonitorList.h  pch.h
src/context/: CMakeLists.txt  Context.cpp  Context.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  Settings.cpp  Settings.h  SharedPreference.cpp  SharedPreference.h
src/controller/: CMakeLists.txt  EventReplayer.cpp  EventReplayer.h  KeyboardReplayer.cpp  KeyboardReplayer.h  MouseReplayer.cpp  MouseReplayer.h
src/encoder/: AudioEncoder.cpp  AudioEncoder.h  CMakeLists.txt  EncodedFrame.cpp  EncodedFrame.h  Encoder.cpp  Encoder.h  EncoderChecker.cpp  EncoderChecker.h  EncoderFactory.cpp  EncoderFactory.h  FFmpegEncoder.cpp  FFmpegEncoder.h  VideoEncoder.cpp  VideoEncoder.h
src/network/: CMakeLists.txt  Connection.cpp  Connection.h  MessageMaker.cpp  MessageMaker.h  MessageProcessor.cpp  MessageProcessor.h  WSServer.cpp  WSServer.h
src/settings/: CMakeLists.txt  Settings.cpp  Settings.h
src/ui/: AboutContent.cpp  AboutContent.h  AppColorTheme.cpp  AppColorTheme.h  AppContent.cpp  AppContent.h  AppMenu.cpp  AppMenu.h  CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  InformationContent.cpp  InformationContent.h  MainPanel.cpp  MainPanel.h  MessageDialog.cpp  MessageDialog.h  RoundRectWidget.cpp  RoundRectWidget.h  SettingsContent.cpp  SettingsContent.h  WidgetHelper.cpp  WidgetHelper.h  Workspace.cpp  Workspace.h
src/util/: CMakeLists.txt  Common.cpp  Common.h  IPUtil.cpp  IPUtil.h  MonitorDetector.cpp  MonitorDetector.h
